Final patterns and output